// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Radio Basic 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-label="label"
      aria-orientation="vertical"
      className="charcoal-radio-group"
      id="test-id"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="radiogroup"
    >
      <label
        className="charcoal-radio"
      >
        <input
          checked={true}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={-1}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={-1}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio Disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-disabled={true}
      aria-label="label"
      aria-orientation="vertical"
      className="charcoal-radio-group"
      id="test-id"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="radiogroup"
    >
      <label
        className="charcoal-radio"
      >
        <input
          checked={true}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={true}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={true}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={true}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio Invalid 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-invalid={true}
      aria-label="label"
      aria-orientation="vertical"
      className="charcoal-radio-group"
      id="test-id"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="radiogroup"
    >
      <label
        className="charcoal-radio"
      >
        <input
          checked={true}
          className="charcoal-radio__input"
          data-invalid={true}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={true}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={-1}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={true}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={-1}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio PartialDisabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-label="label"
      aria-orientation="vertical"
      className="charcoal-radio-group"
      id="test-id"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="radiogroup"
    >
      <label
        className="charcoal-radio"
      >
        <input
          checked={true}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={true}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={-1}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Radio Readonly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      aria-label="label"
      aria-orientation="vertical"
      aria-readonly={true}
      className="charcoal-radio-group"
      id="test-id"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="radiogroup"
    >
      <label
        className="charcoal-radio"
      >
        <input
          checked={true}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="1"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          1
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={-1}
          type="radio"
          value="2"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          2
        </div>
      </label>
      <label
        className="charcoal-radio"
      >
        <input
          checked={false}
          className="charcoal-radio__input"
          data-invalid={false}
          disabled={false}
          name="test-id"
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={-1}
          type="radio"
          value="3"
        />
        <div
          className="charcoal-radio__label"
        >
          Value 
          3
        </div>
      </label>
    </div>
  </div>
</div>
`;
